# hyporo

./: Cargo.toml  flake.nix
crates/hpr-shape/: Cargo.toml
crates/hpr-shape/src/: lib.rs
crates/occt-rs/: Cargo.toml  build.rs
crates/occt-rs/.cargo/: config.toml
crates/occt-rs/src/: lib.rs  wrapper.hpp
examples/: bottle.rs
