[package]
name = "hpr"
version = "0.1.0"
edition = "2021"
authors = ["L-Nafaryus <l.nafaryus@elnafo.ru"]

[dependencies]
bevy = "0.13.1"
cxx = "1.0.120"
glam = { version = "0.24.0", features = ["bytemuck"] }
nalgebra = "0.32.4"
opencascade = { version = "0.2.0", default-features = true }
opencascade-sys = "0.2.0"

[workspace]
members = []
resolver = "2"
