[package]
name = "hpr-shape"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.121"
nalgebra = "0.32.4"
opencascade = { version = "0.2.0", default-features = true }
opencascade-sys = { git = "https://github.com/bschwind/opencascade-rs.git", branch = "main", features = [
    "builtin",
] }
occt-rs = { path = "../occt-rs" }
